--- a/root.tex
+++ b/root.tex
@@ -1,4 +1,8 @@
-\documentclass[debug]{udhbwvst}
+\documentclass[%
+    debug           = true,
+    auto-generate   = true,
+    print-ndn       = false
+]{udhbwvst}
 
 \dhbwSetup{%
 author          = Simon Eßlinger,
