Add bib-file option

--- a/root.tex
+++ b/root.tex
@@ -1,7 +1,7 @@
 \documentclass[%
     debug           = true,
     auto-generate   = true,
-    print-ndn       = false
+    print-ndn       = true
 ]{udhbwvst}
 
 \dhbwSetup{%
