--- a/root.tex
+++ b/root.tex
@@ -39,14 +39,13 @@ acronyms        = {%
     \centering
     \caption{Example caption}
     \includegraphics[width=\textwidth]{assets/figure.png} 
-    \subcaption{Source: \dhbwCite[69]{example}}
+    \footnotesize{Source: \dhbwCite[69]{example}}
     \label{fig:goodreference}
 \end{figure}
 
-\blindtext
+\lipsum
 
-\begin{subcaptionenv}{Source: \dhbwCite[Vgl.][2]{example}}
-    \begin{lstlisting}[caption={Express Example}, language=javascript]
+\begin{code}{caption={Express Example},label=lst:lol,language=javascript}{Eigener Code}
 const express = require('express')
 const app = express()
 const port = 3000
@@ -54,8 +53,21 @@ const port = 3000
 app.get('/', (req, res) => res.send('Hello World!'))
 
 app.listen(port, () => console.log(`Example app listening on port ${port}!`))
-    \end{lstlisting}
-\end{subcaptionenv}
+\end{code}
+
+\blindtext
+
+% \begin{code}{caption={Express Example},label=lst:test,language=javascript}{Eigener Code}
+% const express = require('express')
+% const app = express()
+% const port = 3000
+
+% app.get('/', (req, res) => res.send('Hello World!'))
+
+% app.listen(port, () => console.log(`Example app listening on port ${port}!`))
+% \end{code}
+
+\autoref{lst:test}
 
 \blindtext
 
