Add dhbwfigure environment

--- a/root.tex
+++ b/root.tex
@@ -106,4 +106,16 @@ app.listen(port, () => console.log(`Example app listening on port ${port}!`))
 
 ü ö ä ß test
 
+\lipsum
+
+\begin{dhbwfigure}{caption=Title,label=fig:haha,source={Am Arsch!}}
+    \begin{plantuml}
+        @startuml
+        participant "Cloud" as cloud
+        @enduml            
+    \end{plantuml}
+\end{dhbwfigure}
+
+\autoref{fig:haha}
+
 \end{document}
