Add dhbwtable environment

--- a/root.tex
+++ b/root.tex
@@ -118,4 +118,20 @@ app.listen(port, () => console.log(`Example app listening on port ${port}!`))
 
 \autoref{fig:haha}
 
+\lipsum
+
+\begin{dhbwtable}{%
+    caption={A Table},
+    label=tab:mytable,
+    source={Secret document!}
+}
+    \begin{tabular}{ | c | l |}
+        \hline
+        \textbf{Phase}  & \textbf{Action}       \\ \hline
+        1               & Use a latex template  \\ \hline
+        2               & ???                   \\ \hline
+        3               & Profit!               \\ \hline
+    \end{tabular}
+\end{dhbwtable}
+
 \end{document}
