Improve cite commands

--- a/root.tex
+++ b/root.tex
@@ -104,7 +104,7 @@ app.listen(port, () => console.log(`Example app listening on port ${port}!`))
 
 \section{lol}
 
-\dfootcite{ü}{example}{} ö ä ß test\ifootcite{example}{2}
+\dfootcite[2]{example}{ü} ö ä ß test\ifootcite[1337]{example}
 
 \lipsum
 
